# Tetris

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  setup_assets.py
assets/: README.txt
src/: audio.c  audio.h  board.c  board.h  defs.h  game.c  game.h  input.c  input.h  main.c  piece.c  piece.h  render.c  render.h
